deployment/kubernetes-equivalent.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bridgedb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bridgedb
  template:
    metadata:
      labels:
        name: bridgedb
    spec:
      containers:
      - image: bigcatum/bridgedb:2.3.3-test2
        imagePullPolicy: IfNotPresent
        name: bridgedb
        ports:
        - containerPort: 8080
        - containerPort: 8183
        readinessProbe:
          failureTreshold: 6
          httpGet:
            path: /swagger/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 1
        livenessProbe:
          failureTreshold: 6
          httpGet:
            path: /swagger/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 1500m
            memory: 5000Mi
          limits:
            cpu: 3000m
            memory: 10000Mi
#      serviceAccountName: bridgedb
---
kind: Service
apiVersion: v1
metadata:
  name: bridgedb-app
spec:
  ports:
  - name: app
    port: 8183
    targetPort: 8183
  selector:
    name: bridgedb
---
kind: Service
apiVersion: v1
metadata:
  name: bridgedb-swagger
spec:
  ports:
  - name: swagger
    port: 8080
    targetPort: 8080
  selector:
    name: bridgedb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bridgedb-app
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: bridgedb-app
            port:
              name: app          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bridgedb-swagger
spec:
  rules:
  - http:
      paths:
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: bridgedb-swagger
            port:
              name: swagger
